<?xml version="1.0"?>
<package>
  <name>rosprofiler</name>
  <version>0.1.0</version>
  <description>The rosprofiler package</description>
  <maintainer email="dan@osrfoundation.org">Dan Brooks</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/rosprofiler</url>
  <url type="repository">http://github.com/mrdanbrooks/rosprofiler</url>

  <url type="bugtracker">http://github.com/mrdanbrooks/rosprofiler/issues</url>
  <author email="dan@osrfoundation.org">Dan Brooks</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ros_statistics_msgs</run_depend>
  <run_depend>ros_topology_msgs</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>rosnode</run_depend>
  <run_depend>rospy</run_depend>

  <test_depend>rospy_tutorials</test_depend>
  <test_depend>rostest</test_depend>

</package>
