<?xml version="1.0"?>
<package>
  <name>rosprofiler</name>
  <version>0.1.2</version>
  <description>
      The rosprofiler package provides the rosprofiler and rosgrapher tools.
      These tools run as nodes publishing their collected information on ros topics.
      They have been designed to work with the Topic Statistics feature found
      in ROS Indigo to provide a complete picture of a ROS System. 
  </description>
  <maintainer email="dan@osrfoundation.org">Dan Brooks</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/rosprofiler</url>
  <url type="repository">http://github.com/mrdanbrooks/rosprofiler</url>

  <url type="bugtracker">http://github.com/mrdanbrooks/rosprofiler/issues</url>
  <author email="dan@osrfoundation.org">Dan Brooks</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ros_statistics_msgs</run_depend>
  <run_depend>ros_topology_msgs</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>rosnode</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>python-psutil</run_depend>

  <test_depend>rospy_tutorials</test_depend>
  <test_depend>rostest</test_depend>

</package>
